force-app/main/default/objects/Scheduling__c/Scheduling__c.object-meta.xml
<CustomObject>
    <description>For CREW case</description>
    <label>Scheduling</label>
    <nameField>
        <displayFormat>SC-{00000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduling</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>