force-app/main/default/objects/Scheduling__c/fields/EX_TPE_GD__c.field-meta.xml
<CustomField>
    <fullName>EX_TPE_GD__c</fullName>
    <label>EX-TPE GD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shortage</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>