force-app/main/default/objects/Scheduling__c/fields/Number_of_Crew_Shortage__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Crew_Shortage__c</fullName>
    <label>Number of Crew Shortage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>