force-app/main/default/objects/Scheduling__c/fields/Other_Comments_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Other_Comments_Scheduling__c</fullName>
    <label>Other Comments(Scheduling)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>