force-app/main/default/objects/Scheduling__c/fields/Reason_for_Crew_Shortages__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Crew_Shortages__c</fullName>
    <label>Reason for Crew Shortages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passenger Numbers Increased</fullName>
            </value>
            <value>
                <fullName>Crew Called Sick</fullName>
            </value>
            <value>
                <fullName>Aircraft Changed</fullName>
            </value>
            <value>
                <fullName>Lack of Crew for Dispatch</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>